--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								<p class="STYLE223"><a href="https://xinze-zheng.github.io" target="_blank">William Zheng</a>, Undergraduate Student (UIUC) (Summer 2023 - now),
 									awarded <a href="https://siebelschool.illinois.edu/about/awards/undergraduate-scholarships-awards/jeffrey-p-blahut-memorial-scholarship" target="_blank"><font color="#E84A27">Jeffrey P. Blahut Memorial Scholarship</font></a>
 								</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Shanbo Zhang</a>, Undergraduate Student (UIUC) (Spring 2025 - now),
+								<p class="STYLE223"><a href="https://escapistarcadia.github.io" target="_blank">Shanbo Zhang</a>, Undergraduate Student (UIUC) (Spring 2025 - now),
 									<a href="https://jamesscholars.education.illinois.edu" target="_blank"><font color="#E84A27">James Scholar</font></a>
 								</p>
 								<p class="STYLE223"><a href="https://saadmrp1038.github.io" target="_blank">Saad Mohammad Rafid Pial</a>, Undergraduate Student (BUET) (Summer 2025 - now)</p>
