Update thesis committee details and formatting

--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -88,7 +88,10 @@ td.papers {
             <span style="font-size: 12pt;">
 	    <strong>Adil Inam</strong>
 	    <br>
-            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign
+			<br>
+			Bridging High-Fidelity Provenance and Practical EDR at Enterprise Scale
+			<br>
+            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, passed prelim on Dec. 16, 2025
 			<br>
             Committee: Adam Bates (chair), Gang Wang, Tianyin Xu, Thomas Pasquier
         </div>
@@ -104,7 +107,7 @@ td.papers {
 	    <strong>Siddharth Agarwal</strong>
 		<br>
 			Server Microarchitecture for Hyperscale Networking 
-	    <br>
+	    	<br>
             Department of Electrical and Computer Engineering, University of Illinois Urbana-Champaign, passed prelim on Dec. 4, 2025
 			<br>
             Committee: Nam Sung Kim (chair), Saksham Agarwal, Rakesh Kumar, Tianyin Xu, Mohammad Alian
@@ -119,9 +122,9 @@ td.papers {
           <p></p>
             <span style="font-size: 12pt;">
 	    <strong><a href="https://yangchenyuan.github.io" target="_blank">Chenyuan Yang</a></strong>
-		<br>
-		System Reliability in the Era of Generative AI
-	    <br>
+			<br>
+			System Reliability in the Era of Generative AI
+	    	<br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, passed prelim on Nov. 11, 2025
             <br>
             Committee: Lingming Zhang (chair), Shan Lu, Darko Marinov, Tianyin Xu
@@ -136,9 +139,9 @@ td.papers {
           <p></p>
             <span style="font-size: 12pt;">
 	    <strong><a href="https://tylergu.com" target="_blank">Jiawei Tyler Gu</a></strong>
-	    <br>
-	    Reliable Cloud System Management: Challenges and Tools
-	    <br>
+	    	<br>
+	    	Reliable Cloud System Management: Challenges and Tools
+	    	<br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, passed prelim on Sep. 17, 2025.
             <br>
             Committee: Tianyin Xu (chair), Indranil Gupta, Darko Marinov, Ramnatthan Alagappan, Chen Wang
@@ -153,9 +156,9 @@ td.papers {
           <p></p>
             <span style="font-size: 12pt;">
 	    <strong><a href="https://schai.me" target="_blank">Siyuan Chai</a></strong>
-	    <br>
-	    Building an OS Framework for New Memory Translation Architectures
-	    <br>
+	    	<br>
+	    	Building an OS Framework for New Memory Translation Architectures
+	    	<br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, passed prelim on May 2, 2025. 
             <br>
             Committee: Tianyin Xu (chair), Josep Torrellas, Darko Marinov, Saugata Ghose, Weiwei Jia
