--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -190,13 +190,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-	    <strong><a href="https://jw-liu.xyz" target="_blank">Jiawei Liu</a></strong>
-	    <br>
-	    Software Quality Assurance for Machine Learning Systems
-	    <br>
-            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, passed prelim on Jan. 15, 2025. 
-            <br>
-            Committee: Lingming Zhang (chair), Darko Marinov, Tianyin Xu, Tianqi Chen
+	    ~~
           </span>
         </div>
       </td>
@@ -208,12 +202,18 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-	    ~~
+	    <strong><a href="https://jw-liu.xyz" target="_blank">Jiawei Liu</a></strong>
+	    <br>
+	    Software Quality Assurance for Machine Learning Systems
+	    <br>
+            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, defended on Dec. 22, 2025. 
+            <br>
+            Committee: Lingming Zhang (chair), Darko Marinov, Tianyin Xu, Tianqi Chen
           </span>
         </div>
       </td>
   </tr>
-
+	  
   <tr>
     <td class="date"><font color="#083b89"></font></td>
       <td class="papers">
