Reorder links in pub.html

--- a/pub.html
+++ b/pub.html
@@ -199,8 +199,8 @@ td.papers {
 						  <font color="#C40233">
 					            <b>Covered by <a href="https://www.reddit.com/r/rust/comments/1lxm2kx/rex_closing_the_languageverifier_gap_with_safe/" target="_blank">Reddit r/rust</a>,
 								<a href="https://www.phoronix.com/news/Linux-Kernel-Rust-Rex">Phoronix</a>,
-						    	<a href="https://discourse.ubuntu.com/t/open-source-summit-from-the-linux-foundation-june-23-25-denver-colorado-usa/63534">Ubuntu Community Discourse</a>, and
-							<a href="https://news.ycombinator.com/item?id=46361927" target="_blank">Hacker News</a>
+								<a href="https://news.ycombinator.com/item?id=46361927" target="_blank">Hacker News</a>, and 
+						    	<a href="https://discourse.ubuntu.com/t/open-source-summit-from-the-linux-foundation-june-23-25-denver-colorado-usa/63534">Ubuntu Community Discourse</a>
 						    </b>
 					          </font>
 					  	</span>
