Add links for Nikhil Date and Henry Qiu

--- a/index.html
+++ b/index.html
@@ -656,6 +656,8 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									<a href="https://siebelschool.illinois.edu/broadening-participation-computing/programs/csambassadors" target="_blank"><font color="#E84A27">CS STARS</font></a>,
 									<a href="https://jamesscholars.education.illinois.edu" target="_blank"><font color="#E84A27">James Scholar</font></a>
 								</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Nikhil Date</a>, Undergraduate Student (Fall 2025 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Henry Qiu</a>, Undergraduate Student (Fall 2025 - now)</p>
                              </TD>
                           </TR>
 
