--- a/index.html
+++ b/index.html
@@ -539,13 +539,15 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 		      <a href="https://escholarship.org/uc/jsys/about" target="_blank">Journal of Systems Research</a>
 		     (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860" target="_blank">Why JSys?</a>)
 	          </p>
-	          <p class="STYLE223">2026
-			SOSP, ISCA,
+	       <p class="STYLE223">2026
+			SOSP, 
+			OSDI,
+			<a href="https://iscaconf.org/isca2026" target="_blank">ISCA</a>,
 		    <a href="https://2026.eurosys.org" target="_blank">EuroSys</a>,
 		    <a href="https://www.usenix.org/conference/nsdi26" target="_blank">NSDI</a>,
 		    <a href="https://conf.researchr.org/home/fse-2026" target="_blank">FSE</a>,
-			ICLR
-	          </p>
+			ATC (publication chair)
+	      </p>
 		  <p class="STYLE223">2025
 		    <a href="https://sigops.org/s/conferences/sosp/2025" target="_blank">SOSP</a>,
 		    <a href="https://www.usenix.org/conference/osdi25" target="_blank">OSDI</a>,
@@ -634,7 +636,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/outstanding-teaching-assistants" target="_blank"><font color="#E84A27">Outstanding TA Award</font></a>
 								</p>
 								<p class="STYLE223"><a href="https://shuaiwang516.github.io" target="_blank">Shuai Wang</a>, PhD Candidate (Fall 2021 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
-								<p class="STYLE223"><a href="https://jiyuan.is" target="_blank">Jiyuan Zhang</a>, PhD Candidate (Fall 2022 - now),
+								<p class="STYLE223"><a href="https://jiyuan.is" target="_blank">Jiyuan Zhang</a>, PhD Candidate (Fall 2022 - now), co-advised by <a href="https://ece.illinois.edu/about/directory/faculty/nskim" target="_blank">Nam Sung Kim</a>,
 									awarded <a href="https://siebelschool.illinois.edu/about/awards/graduate-fellowships-awards/wing-kai-cheng-fellowship" target="_blank"><font color="#E84A27">Wing Kai Cheng Fellowship</font></a>
 								</p>
 								<p class="STYLE223"><a href="https://wentao.systems" target="_blank">Wentao Zhang</a>, PhD Student (Fall 2023 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
@@ -673,7 +675,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 					awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/yunni-and-maxine-pao-memorial-fellowship" target="_blank"><font color="#E84A27">Yunni and Maxine Pao Memorial Fellowship</font></a>,
 					<a href="https://mavis.grainger.illinois.edu/" target="_blank"><font color="#E84A27">Mavis Future Faculty Fellow</font></a> &rarr; University of Toronto (assistant professor)
 				  </p>
-			          <p class="STYLE223"><a href="https://jinghao-jia.github.io" target="_blank">Jinghao Jia</a>, PhD 2025 (<a href="thesis/JIA-DISSERTATION-2025.pdf" target="_blank">dissertation</a>), 
+			      <p class="STYLE223"><a href="https://jinghao-jia.github.io" target="_blank">Jinghao Jia</a>, PhD 2025 (<a href="thesis/JIA-DISSERTATION-2025.pdf" target="_blank">dissertation</a>), 
 					co-advised by <a href="https://people.cs.vt.edu/djwillia/" target="_blank">Dan Williams</a>, 
 				  	awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/richard-t-cheng-endowed-fellowship" target="_blank"><font color="#E84A27">Richard T. Cheng Fellowship</font></a>, 
 					<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/outstanding-teaching-assistants" target="_blank"><font color="#E84A27">Outstanding TA Award</font></a> &rarr; Meta
