--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -86,13 +86,28 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
+	    <strong>Vignesh Vinayaka Suresh</strong>
+			<br>
+            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign
+			<br>
+            Committee: Sarita Adve (chair), Deming Chen, Nam Sung Kim, and Tianyin Xu
+        </div>
+      </td>
+  </tr>
+
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
 	    <strong>Adil Inam</strong>
 			<br>
 			Bridging High-Fidelity Provenance and Practical EDR at Enterprise Scale
 			<br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, passed prelim on Dec. 16, 2025
 			<br>
-            Committee: Adam Bates (chair), Gang Wang, Tianyin Xu, Thomas Pasquier
+            Committee: Adam Bates (chair), Gang Wang, Tianyin Xu, and Thomas Pasquier
         </div>
       </td>
   </tr>
@@ -109,7 +124,7 @@ td.papers {
 	    	<br>
             Department of Electrical and Computer Engineering, University of Illinois Urbana-Champaign, passed prelim on Dec. 4, 2025
 			<br>
-            Committee: Nam Sung Kim (chair), Saksham Agarwal, Rakesh Kumar, Tianyin Xu, Mohammad Alian
+            Committee: Nam Sung Kim (chair), Saksham Agarwal, Rakesh Kumar, Tianyin Xu, and Mohammad Alian
         </div>
       </td>
   </tr>
@@ -126,7 +141,7 @@ td.papers {
 	    	<br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, passed prelim on Nov. 11, 2025
             <br>
-            Committee: Lingming Zhang (chair), Shan Lu, Darko Marinov, Tianyin Xu
+            Committee: Lingming Zhang (chair), Shan Lu, Darko Marinov, and Tianyin Xu
         </div>
       </td>
   </tr>
@@ -143,7 +158,7 @@ td.papers {
 	    	<br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, passed prelim on Sep. 17, 2025.
             <br>
-            Committee: Tianyin Xu (chair), Indranil Gupta, Darko Marinov, Ramnatthan Alagappan, Chen Wang
+            Committee: Tianyin Xu (chair), Indranil Gupta, Darko Marinov, Ramnatthan Alagappan, and Chen Wang
         </div>
       </td>
   </tr>
@@ -160,7 +175,7 @@ td.papers {
 	    	<br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, passed prelim on May 2, 2025. 
             <br>
-            Committee: Tianyin Xu (chair), Josep Torrellas, Darko Marinov, Saugata Ghose, Weiwei Jia
+            Committee: Tianyin Xu (chair), Josep Torrellas, Darko Marinov, Saugata Ghose, and Weiwei Jia
           </span>
         </div>
       </td>
@@ -178,7 +193,7 @@ td.papers {
 	    <br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, passed prelim on Apr. 22, 2025. 
             <br>
-            Committee: Tianyin Xu (chair), Lingming Zhang, Darko Marinov, Minjia Zhang, Indranil Gupta, Minghua Ma
+            Committee: Tianyin Xu (chair), Lingming Zhang, Darko Marinov, Minjia Zhang, Indranil Gupta, and Minghua Ma
           </span>
         </div>
       </td>
@@ -208,7 +223,7 @@ td.papers {
 	    <br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, defended on Dec. 22, 2025. 
             <br>
-            Committee: Lingming Zhang (chair), Darko Marinov, Tianyin Xu, Tianqi Chen
+            Committee: Lingming Zhang (chair), Darko Marinov, Tianyin Xu, and Tianqi Chen
           </span>
         </div>
       </td>
@@ -226,7 +241,7 @@ td.papers {
 	    <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Nov. 7, 2025.
             <br>
-            Committee: Nam Sung Kim (chair), Josep Torrellas, Saugata Ghose, Tianyin Xu, Ren Wang
+            Committee: Nam Sung Kim (chair), Josep Torrellas, Saugata Ghose, Tianyin Xu, and Ren Wang
           </span>
         </div>
       </td>
@@ -244,7 +259,7 @@ td.papers {
 	    <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on June 30, 2025.
             <br>
-            Committee: Adam Bates (chair), Gang Wang, Tianyin Xu, Patrick Traynor
+            Committee: Adam Bates (chair), Gang Wang, Tianyin Xu, and Patrick Traynor
           </span>
         </div>
       </td>
@@ -262,7 +277,7 @@ td.papers {
 	    <br>
             Siebel School of Computing and Data Science, University of Illinois at Urbana-Champaign, defended on May 30, 2025.
             <br>
-            Committee: Josep Torrellas (chair), Darko Marinov, Jian Huang, Tianyin Xu, Hubertus Franke, Christina Delimitrou, Christopher Hughes, Dimitrios Skarlatos
+            Committee: Josep Torrellas (chair), Darko Marinov, Jian Huang, Tianyin Xu, Hubertus Franke, Christina Delimitrou, Christopher Hughes, and Dimitrios Skarlatos
           </span>
         </div>
       </td>
@@ -280,7 +295,7 @@ td.papers {
 	    <br>
             Siebel School of Computing and Data Science, University of Illinois at Urbana-Champaign, defended on May 7, 2025. 
             <br>
-            Committee: Tianyin Xu (chair), Aishwarya Ganesan, Philip Brighten Godfrey, Jon Howell, Darko Marinov, Lalith Suresh
+            Committee: Tianyin Xu (chair), Aishwarya Ganesan, Philip Brighten Godfrey, Jon Howell, Darko Marinov, and Lalith Suresh
           </span>
         </div>
       </td>
@@ -298,7 +313,7 @@ td.papers {
 	    <br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, defended on Apr. 4, 2025. 
             <br>
-            Committee: Tianyin Xu (chair), Adam Bates, Hubertus Franke, Michael V. Le, Darko Marinov, Dan Williams
+            Committee: Tianyin Xu (chair), Adam Bates, Hubertus Franke, Michael V. Le, Darko Marinov, and Dan Williams
           </span>
         </div>
       </td>
@@ -316,7 +331,7 @@ td.papers {
 	    <br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, defended on Apr. 1, 2025.
             <br>
-            Committee: Darko Marinov (chair), Lingming Zhang, Tianyin Xu, Wei Yang
+            Committee: Darko Marinov (chair), Lingming Zhang, Tianyin Xu, and Wei Yang
           </span>
         </div>
       </td>
@@ -334,7 +349,7 @@ td.papers {
             <br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, defended on Mar. 25, 2025.
             <br>
-            Committee: Kirill Levchenko (chair), Gang Wang, Tianyin Xu, Kimberly "kc" Claffy
+            Committee: Kirill Levchenko (chair), Gang Wang, Tianyin Xu, and Kimberly "kc" Claffy
           </span>
         </div>
       </td>
@@ -352,7 +367,7 @@ td.papers {
 	    <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Oct. 21, 2024.
             <br>
-            Committee: Matthew Caesar (chair), Brighten Godfrey, Radhika Mittal, Tianyin Xu, David Walker, Steffen Smolka
+            Committee: Matthew Caesar (chair), Brighten Godfrey, Radhika Mittal, Tianyin Xu, David Walker, and Steffen Smolka
           </span>
         </div>
       </td>
@@ -370,7 +385,7 @@ td.papers {
 	    <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on April 5, 2024.
             <br>
-            Committee: Kevin Chen-Chuan Chang (chair), Hao Peng, Hanghang Tong, Tianyin Xu, Diyi Yang
+            Committee: Kevin Chen-Chuan Chang (chair), Hao Peng, Hanghang Tong, Tianyin Xu, and Diyi Yang
           </span>
         </div>
       </td>
@@ -391,7 +406,7 @@ td.papers {
 		    passed prelim on Oct. 2022.
 -->
             <br>
-            Committee: Klara Nahrstedt (chair), Deming Chen, Tianyin Xu, Baochun Li
+            Committee: Klara Nahrstedt (chair), Deming Chen, Tianyin Xu, and Baochun Li
           </span>
         </div>
       </td>
@@ -409,7 +424,7 @@ td.papers {
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Nov. 17, 2023.
             <br>
-            Committee: Brighten Godfrey (chair), Ryan Beckett, Indranil Gupta, Tianyin Xu
+            Committee: Brighten Godfrey (chair), Ryan Beckett, Indranil Gupta, and Tianyin Xu
           </span>
         </div>
       </td>
@@ -427,7 +442,7 @@ td.papers {
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Aug. 15, 2023.
             <br>
-            Committee: Gul Agha (chair), Indranil Gupta, Tianyin Xu, Philipp Haller
+            Committee: Gul Agha (chair), Indranil Gupta, Tianyin Xu, and Philipp Haller
           </span>
         </div>
       </td>
@@ -447,7 +462,7 @@ td.papers {
             <br>
             Advisor: <a href="https://monet.cs.illinois.edu/people/klara/" target="_blank">Klara Nahrstedt</a>
             <br>
-            Committee: Klara Nahrstedt (chair), Brighten Godfrey, Tianyin Xu, Baochun Li
+            Committee: Klara Nahrstedt (chair), Brighten Godfrey, Tianyin Xu, and Baochun Li
           </span>
         </div>
       </td>
@@ -465,7 +480,7 @@ td.papers {
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Jun. 25, 2022.
             <br>
-            Committee: Tao Xie (co-chair), Tianyin Xu (co-chair), Darko Marinov, Mukul Prasad
+            Committee: Tao Xie (co-chair), Tianyin Xu (co-chair), Darko Marinov, and Mukul Prasad
           </span>
         </div>
       </td>
@@ -483,7 +498,7 @@ td.papers {
 	    <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Apr. 13, 2022.
             <br>
-            Committee: Sibin Mohan (chair), Ravishankar Iyer, Vikram Adve, Tianyin Xu, Daniel Williams
+            Committee: Sibin Mohan (chair), Ravishankar Iyer, Vikram Adve, Tianyin Xu, and Dan Williams
           </span>
         </div>
       </td>
@@ -501,7 +516,7 @@ td.papers {
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Apr. 6, 2022.
             <br>
-            Committee: Josep Torrellas (chair), Jian Huang, David Padua, Tianyin Xu, John Kalamatianos, Thomas F. Wenisch, Vijay Nagarajan
+            Committee: Josep Torrellas (chair), Jian Huang, David Padua, Tianyin Xu, John Kalamatianos, Thomas F. Wenisch, and Vijay Nagarajan
             <br>
 	    <font color="#C40233"><b>David J. Kuck Outstanding PhD Thesis Award</b></font>
           </span>
@@ -521,7 +536,7 @@ td.papers {
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Jan. 6, 2022.
             <br>
-            Committee: Gul Agha (chair), Klara Nahrstedt, Tianyin Xu, Myeongjae Jeon
+            Committee: Gul Agha (chair), Klara Nahrstedt, Tianyin Xu, and Myeongjae Jeon
           </span>
         </div>
       </td>
@@ -539,7 +554,7 @@ td.papers {
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Oct. 14, 2021.
             <br>
-            Committee: Ravishankar K. Iyer (chair), Wen-mei W. Hwu, William T. Kramer, Tianyin Xu, Steve Keckler
+            Committee: Ravishankar K. Iyer (chair), Wen-mei W. Hwu, William T. Kramer, Tianyin Xu, and Steve Keckler
           </span>
         </div>
       </td>
@@ -557,7 +572,7 @@ td.papers {
 	    <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on July 27, 2021.
             <br>
-            Committee: Brighten Godfrey (co-chair), Grigore Roşu (co-chair), Tianyin Xu, Jitendra Padhye
+            Committee: Brighten Godfrey (co-chair), Grigore Roşu (co-chair), Tianyin Xu, and Jitendra Padhye
           </span>
         </div>
       </td>
@@ -575,7 +590,7 @@ td.papers {
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on June 24, 2021.
             <br>
-            Committee: Tao Xie (co-chair), Darko Marinov (co-chair), Tianyin Xu, Suman Nath
+            Committee: Tao Xie (chair), Darko Marinov (co-chair), Tianyin Xu, and Suman Nath
             <br>
 	    <font color="#C40233"><b>ACM SIGSOFT Outstanding Doctoral Dissertation Award</b></font>
 	  </span>
@@ -595,7 +610,7 @@ td.papers {
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on August 19, 2020.
             <br>
-            Committee: Josep Torrellas (chair), Christopher W. Fletcher, Nam Sung Kim, Christos Kozyrakis, Vijayaraghavan (Ravi) Soundararajan, Tianyin Xu
+            Committee: Josep Torrellas (chair), Christopher W. Fletcher, Nam Sung Kim, Christos Kozyrakis, Vijayaraghavan (Ravi) Soundararajan, and Tianyin Xu
 	    <br>
 	    <font color="#C40233"><b>ACM SIGARCH - IEEE-CS TCCA Outstanding Dissertation Award</b></font>
 	    <br>
@@ -617,7 +632,7 @@ td.papers {
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on July 1, 2020.
             <br>
-            Committee: Indranil Gupta (chair), Klara Nahrtstedt, Tianyin Xu, Ganesh Ananthanarayanan
+            Committee: Indranil Gupta (chair), Klara Nahrtstedt, Tianyin Xu, and Ganesh Ananthanarayanan
           </span>
         </div>
       </td>
@@ -636,7 +651,7 @@ td.papers {
               <br>
               Department of Computer Science, University of Illinois at Urbana-Champaign, defended on May 8, 2020.
               <br>
-              Committee: Klara Nahrtstedt (chair), Indranil Gupta, Tianyin Xu, Rittwik Jana
+              Committee: Klara Nahrtstedt (chair), Indranil Gupta, Tianyin Xu, and Rittwik Jana
             </span>
           </div>
         </td>
@@ -654,7 +669,7 @@ td.papers {
               <br>
               Department of Computer Science, University of Illinois at Urbana-Champaign, defended on March 12, 2020.
               <br>
-              Committee: Matthew Caesar (chair), Brighten Godfrey, Tianyin Xu, Aurojit Panda, Alan Mishchenko
+              Committee: Matthew Caesar (chair), Brighten Godfrey, Tianyin Xu, Aurojit Panda, and Alan Mishchenko
             </span>
           </div>
         </td>
