--- a/index.html
+++ b/index.html
@@ -660,6 +660,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Nikhil Date</a>, Undergraduate Student (Fall 2025 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Henry Qiu</a>, Undergraduate Student (Fall 2025 - now)</p>
+								<p class="STYLE223"><a href="https://chimcisaac.co" target="_blank">Chi McIsaac</a>, Undergraduate Student (Carleton) (Spring 2026 - now)</p>
                              </TD>
                           </TR>
 
