--- a/travel.html
+++ b/travel.html
@@ -392,13 +392,14 @@ div.Section1
 						    <li>Atlanta, GA (2017) </li>
 							<li>Austin, TX (2025) </li>
 						    <li>Baltimore, MD (2017) </li>
-						    <li>Berkeley, CA (2018, 2024) </li>
+						    <li>Berkeley, CA (2018, 2024, 2025) </li>
 						    <li>Big Sur, CA (2017) </li>
 					        <li>Bloomington, IL (2020, 2023) </li>
 						    <li>Bloomington, IN (2021) </li>
                             <li>Boston, MA (2019, 2023, 2025) </li>
 						    <li>Boulder, CO (2023) </li>
 						    <li>Broomfield, CO (2014) </li>
+							<li>Bryce Canyon City, UT (2025) </li>
 						    <li>Buffalo, NY (2023) </li>	  
 						    <li>Carmel-by-the-Sea, CA (2017) </li>
 						    <li>Cheyenne, WY (2018) </li>
@@ -435,6 +436,7 @@ div.Section1
 						    <li>Knoxville, TN (2022) </li>
 						    <li>Lake Tahoe, CA / NV (2018) </li>
 						    <li>Laramie, WY (2018) </li>
+							<li>Las Vegas, NV (2025) </li>
 						    <li>Lexington, KY (2021) </li>
 				  		    <li>Little Rock, AK (2024) </li>
 				  		    <li>Long Island, NY (2024, 2025) </li>
@@ -451,6 +453,7 @@ div.Section1
 						    <li>Morro Bay, CA (2017) </li>
 						    <li>Mount Kisco, NY (2025) </li>
 						    <li>Mountain View, CA (2024) </li>
+							<li>Napa, CA (2025) </li>
 						    <li>Nashville, TN (2022) </li>
 						    <li>Newark, CA (2017-2018) </li>
 						    <li>New Port, RI (2023) </li>
@@ -473,6 +476,7 @@ div.Section1
 						    <li>San Francisco, CA (2017,2023) </li>
 						    <li>San Jose, CA (2017) </li>
 						    <li>San Pablo, CA (2024)</li>
+							<li>San Mateo, CA (2025) </li>
 						    <li>Sandusky, OH (2021) </li>
 						    <li>Santa Barbara, CA (2017) </li>
 						    <li>Santa Clara, CA (2012, 2015, 2017, 2018, 2024) </li>
@@ -493,7 +497,7 @@ div.Section1
 						    <li>Champaign-Urbana, IL (2018--)</li>
 						    <li>West Lafayette, IN (2023) </li>
 				  		    <li>White Plains, NY (2022, 2023) </li>
-				  		    <li>Yorktown Heights, NY (2022, 2023, 2024) </li>
+				  		    <li>Yorktown Heights, NY (2022, 2023, 2024, 2025) </li>
                           </ul>
                         </li>
 						<li><font color="#083b89"><b>Vatican</b></font>:
