Update committee members and affiliations in HTML

--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -86,9 +86,22 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
+	    <strong><a href="https://ynnsau.github.io" target="_blank">Yan Sun</a></strong>
+			<br>
+            Department of Electrical and Computer Engineering, University of Illinois Urbana-Champaign
+        </div>
+      </td>
+  </tr>
+
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
 	    <strong>Vignesh Vinayaka Suresh</strong>
 			<br>
-            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign
+            Department of Electrical and Computer Engineering, University of Illinois Urbana-Champaign
 			<br>
             Committee: Sarita Adve (chair), Deming Chen, Nam Sung Kim, and Tianyin Xu
         </div>
@@ -101,7 +114,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-	    <strong>Adil Inam</strong>
+		<strong><a href="https://mainam2.web.illinois.edu" target="_blank">Adil Inam</a></strong>
 			<br>
 			Bridging High-Fidelity Provenance and Practical EDR at Enterprise Scale
 			<br>
