Update William Zheng's information and remove entry
Removed William Zheng's entry and updated his information to reflect his current status as a UIUC BS student, including scholarship details.

--- a/index.html
+++ b/index.html
@@ -645,9 +645,6 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								<p class="STYLE223"><a href="https://yimingsu01.github.io" target="_blank">Yiming Su</a>, PhD Student (Fall 2024 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Peizhe Liu</a>, MS Student (Fall 2024 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Leshna Balara</a>, MS Student (UW–Madison) (Spring 2025 - now)</p>
-								<p class="STYLE223"><a href="https://xinze-zheng.github.io" target="_blank">William Zheng</a>, Undergraduate Student (UIUC) (Summer 2023 - now),
-									awarded <a href="https://siebelschool.illinois.edu/about/awards/undergraduate-scholarships-awards/jeffrey-p-blahut-memorial-scholarship" target="_blank"><font color="#E84A27">Jeffrey P. Blahut Memorial Scholarship</font></a>
-								</p>
 								<p class="STYLE223"><a href="https://escapistarcadia.github.io" target="_blank">Shanbo Zhang</a>, Undergraduate Student (UIUC) (Spring 2025 - now),
 									<a href="https://jamesscholars.education.illinois.edu" target="_blank"><font color="#E84A27">James Scholar</font></a>
 								</p>
@@ -700,6 +697,9 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE223"><a href="https://x-czh.github.io" target="_blank">Zhanghao Chen</a>, MCS 2020 (<a href="https://github.com/xlab-uiuc/cflow" target="_blank">project</a>) &rarr; ByteDance (Stream Computing Infra)</p>
 				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a>, MS 2019 (<a href="thesis/ANG-THESIS-2019.pdf" target="_blank">thesis</a>) &rarr; Google (Spanner) &rarr; Columbia University (PhD)</p>
 				  <p class="STYLE224"># Bachelors</p>
+				  <p class="STYLE223"><a href="https://xinze-zheng.github.io" target="_blank">William Zheng</a>, UIUC BS, 2025
+						  awarded <a href="https://siebelschool.illinois.edu/about/awards/undergraduate-scholarships-awards/jeffrey-p-blahut-memorial-scholarship" target="_blank"><font color="#E84A27">Jeffrey P. Blahut Memorial Scholarship</font> &rarr; Microsoft Research Asia</a>
+				  </p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Rubin Du</a>, UIUC BE, 2025 &rarr; Nvidia</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiaqi Pan</a> (Tsinghua), Spring+Summer 2025 &rarr; Tsinghua University (PhD)</p>
 				  <p class="STYLE223"><a href="https://minhphan8803.github.io" target="_blank">Minh Phan</a>, UIUC BS, Spring 2025 &rarr; University of Texas at Austin (PhD)</p>
