Fix HTML formatting for scholarship award text

--- a/index.html
+++ b/index.html
@@ -698,8 +698,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a>, MS 2019 (<a href="thesis/ANG-THESIS-2019.pdf" target="_blank">thesis</a>) &rarr; Google (Spanner) &rarr; Columbia University (PhD)</p>
 				  <p class="STYLE224"># Bachelors</p>
 				  <p class="STYLE223"><a href="https://xinze-zheng.github.io" target="_blank">William Zheng</a>, UIUC BS, 2025
-						  awarded <a href="https://siebelschool.illinois.edu/about/awards/undergraduate-scholarships-awards/jeffrey-p-blahut-memorial-scholarship" target="_blank"><font color="#E84A27">Jeffrey P. Blahut Memorial Scholarship</font> &rarr; Microsoft Research Asia</a>
-				  </p>
+						  awarded <a href="https://siebelschool.illinois.edu/about/awards/undergraduate-scholarships-awards/jeffrey-p-blahut-memorial-scholarship" target="_blank"><font color="#E84A27">Jeffrey P. Blahut Memorial Scholarship</font></a> &rarr; Microsoft Research Asia</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Rubin Du</a>, UIUC BE, 2025 &rarr; Nvidia</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiaqi Pan</a> (Tsinghua), Spring+Summer 2025 &rarr; Tsinghua University (PhD)</p>
 				  <p class="STYLE223"><a href="https://minhphan8803.github.io" target="_blank">Minh Phan</a>, UIUC BS, Spring 2025 &rarr; University of Texas at Austin (PhD)</p>
