Add Spring 26 links to course listings

--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									(<a href="https://cs523-uiuc.github.io/spring23/" target="_blank">Spring 23</a>)
 									(<a href="https://cs523-uiuc.github.io/spring24/" target="_blank">Spring 24</a>)
 									(<a href="https://cs523-uiuc.github.io/spring25/" target="_blank">Spring 25</a>)
+									(<a href="https://cs523-uiuc.github.io/spring26/" target="_blank">Spring 26</a>)
 								</p>
 								<p class="STYLE223">CS 423: Operating System Design
 									(<a href="https://cs423-uiuc.github.io/spring20/" target="_blank">Spring 20</a>)
@@ -390,6 +391,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									(<a href="https://systems-seminar-uiuc.github.io/fall24/" target="_blank">Fall 24</a>)
 									(<a href="https://systems-seminar-uiuc.github.io/spring25/" target="_blank">Spring 25</a>)
 									(<a href="https://systems-seminar-uiuc.github.io/fall25/" target="_blank">Fall 25</a>)
+									(<a href="https://systems-seminar-uiuc.github.io/spring26/" target="_blank">Spring 26</a>)
 								</p>
 								<p class="STYLE223">CS 591(SE): Software Engineering Seminar
 									(<a href="https://wiki.illinois.edu/wiki/display/SoftEng" target="_blank">Fall 19</a>)
