Add ICLR'26 paper details to pub.html

--- a/pub.html
+++ b/pub.html
@@ -80,6 +80,24 @@ td.papers {
 	</tr>
 
 	<tr>
+		<td class="date"><font color="#083b89">ICLR'26</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						  <strong>SysMoBench: Evaluating AI on Formally Specifying Complex Real-World Systems</strong> [<a href="pub/https://arxiv.org/pdf/2509.23130" target="_blank">pdf</a> | <a href="pub/sysmobench_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Qian Cheng, Ruize Tang, Emilie Ma, Finn Hackett, Peiyang He, Yiming Su, Ivan Beschastnikh, Yu Huang, Xiaoxing Ma, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 14th International Conference on Learning Representations (<font color="#083b89"><b>ICLR'26</b></font>), Rio de Janeiro, Brazil, Apr. 2026.
+						  <br>
+						  Artifact: <a href="https://github.com/specula-org/SysMoBench" target="_blank">https://github.com/specula-org/SysMoBench</a>
+					  	</span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
 		<td class="date"><font color="#083b89">NeurIPS'25</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
