--- a/pub.html
+++ b/pub.html
@@ -85,7 +85,7 @@ td.papers {
 				  <div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-						  <strong>SysMoBench: Evaluating AI on Formally Specifying Complex Real-World Systems</strong> [<a href="https://arxiv.org/abs/2509.23130" target="_blank">pdf</a> | <a href="pub/sysmobench_bib.txt" target="_blank">bib</a>]
+						  <strong>SysMoBench: Evaluating AI on Formally Specifying Complex Real-World Systems</strong> [<a href="https://arxiv.org/pdf/2509.23130" target="_blank">pdf</a> | <a href="pub/sysmobench_bib.txt" target="_blank">bib</a>]
 						  <br>
 						  Qian Cheng, Ruize Tang, Emilie Ma, Finn Hackett, Peiyang He, Yiming Su, Ivan Beschastnikh, Yu Huang, Xiaoxing Ma, and Tianyin Xu
 						  <br>
