Update thesis committee members' information
Added new committee members with their affiliations.

--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -99,6 +99,19 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
+		<strong><a href="https://yangc9.github.io" target="_blank">Yang Chen</a></strong>
+			<br>
+            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign
+        </div>
+      </td>
+  </tr>
+
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
 	    <strong>Vignesh Vinayaka Suresh</strong>
 			<br>
             Department of Electrical and Computer Engineering, University of Illinois Urbana-Champaign
