--- a/index.html
+++ b/index.html
@@ -651,8 +651,6 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									<a href="https://jamesscholars.education.illinois.edu" target="_blank"><font color="#E84A27">James Scholar</font></a>
 								</p>
 								<p class="STYLE223"><a href="https://saadmrp1038.github.io" target="_blank">Saad Mohammad Rafid Pial</a>, Undergraduate Student (BUET) (Summer 2025 - now)</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Bohan Cui</a>, Undergraduate Student (NJU) (Summer 2025 - now)</p>
-								<p class="STYLE223"><a href="https://777lefty.github.io" target="_blank">Jiaqi Huang</a>, Undergraduate Student (NJU) (Summer 2025 - now)</p>
 								<p class="STYLE223"><a href="https://lilygniedz.me" target="_blank">Lily Gniedziejko</a>, Undergraduate Student (Summer 2025 - now),
 									<a href="https://siebelschool.illinois.edu/broadening-participation-computing/programs/csambassadors" target="_blank"><font color="#E84A27">CS STARS</font></a>,
 									<a href="https://jamesscholars.education.illinois.edu" target="_blank"><font color="#E84A27">James Scholar</font></a>
@@ -701,6 +699,8 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE224"># Bachelors</p>
 				  <p class="STYLE223"><a href="https://xinze-zheng.github.io" target="_blank">William Zheng</a>, UIUC BS, 2025
 						  awarded <a href="https://siebelschool.illinois.edu/about/awards/undergraduate-scholarships-awards/jeffrey-p-blahut-memorial-scholarship" target="_blank"><font color="#E84A27">Jeffrey P. Blahut Memorial Scholarship</font></a> &rarr; Microsoft Research Asia</p>
+				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Bohan Cui</a>, Undergraduate Student (NJU), Summer and Fall 2025</p>
+				  <p class="STYLE223"><a href="https://777lefty.github.io" target="_blank">Jiaqi Huang</a>, Undergraduate Student (NJU), Summer and Fall 2025</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Rubin Du</a>, UIUC BE, 2025 &rarr; Nvidia</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiaqi Pan</a> (Tsinghua), Spring+Summer 2025 &rarr; Tsinghua University (PhD)</p>
 				  <p class="STYLE223"><a href="https://minhphan8803.github.io" target="_blank">Minh Phan</a>, UIUC BS, Spring 2025 &rarr; University of Texas at Austin (PhD)</p>
