Update thesis committee chair names in HTML

--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -102,6 +102,8 @@ td.papers {
 		<strong><a href="https://yangc9.github.io" target="_blank">Yang Chen</a></strong>
 			<br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign
+			<br>
+            Committee: Reyhaneh Jabbarvand (chair), Darko Marinov (co-chair), Tianyin Xu, Martin Hirzel, and Claire Le Goues
         </div>
       </td>
   </tr>
@@ -506,7 +508,7 @@ td.papers {
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Jun. 25, 2022.
             <br>
-            Committee: Tao Xie (co-chair), Tianyin Xu (co-chair), Darko Marinov, and Mukul Prasad
+            Committee: Tao Xie (chair), Tianyin Xu (co-chair), Darko Marinov, and Mukul Prasad
           </span>
         </div>
       </td>
@@ -598,7 +600,7 @@ td.papers {
 	    <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on July 27, 2021.
             <br>
-            Committee: Brighten Godfrey (co-chair), Grigore Roşu (co-chair), Tianyin Xu, and Jitendra Padhye
+            Committee: Brighten Godfrey (chair), Grigore Roşu (co-chair), Tianyin Xu, and Jitendra Padhye
           </span>
         </div>
       </td>
