--- a/index.html
+++ b/index.html
@@ -645,6 +645,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								<p class="STYLE223"><a href="https://cathy-cai.page/" target="_blank">Cathy Cai</a>, PhD Student (Fall 2024 - now)</p>
 								<p class="STYLE223"><a href="https://hacksonclark.github.io" target="_blank">Jackson Clark</a>, PhD Student (Fall 2024 - now)</p>
 								<p class="STYLE223"><a href="https://yimingsu01.github.io" target="_blank">Yiming Su</a>, PhD Student (Fall 2024 - now)</p>
+								<p class="STYLE223"><a href="https://ayushb.org" target="_blank">Ayush Bansal</a>, PhD Student (Fall 2025 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Peizhe Liu</a>, MS Student (Fall 2024 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Leshna Balara</a>, MS Student (UW–Madison) (Spring 2025 - now)</p>
 								<p class="STYLE223"><a href="https://escapistarcadia.github.io" target="_blank">Shanbo Zhang</a>, Undergraduate Student (UIUC) (Spring 2025 - now),
