Update thesis committee member details

--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -116,7 +116,7 @@ td.papers {
             <span style="font-size: 12pt;">
 	    <strong>Vignesh Vinayaka Suresh</strong>
 			<br>
-            Department of Electrical and Computer Engineering, University of Illinois Urbana-Champaign
+            Department of Electrical and Computer Engineering, University of Illinois Urbana-Champaign, passed prelim on Feb. 10, 2026
 			<br>
             Committee: Sarita Adve (chair), Deming Chen, Nam Sung Kim, and Tianyin Xu
         </div>
