Add thesis title and update committee details

--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -116,6 +116,8 @@ td.papers {
             <span style="font-size: 12pt;">
 	    <strong>Vignesh Vinayaka Suresh</strong>
 			<br>
+			Rethinking Interfaces for Efficient Composition of Disaggregated Hardware
+			<br>
             Department of Electrical and Computer Engineering, University of Illinois Urbana-Champaign, passed prelim on Feb. 10, 2026
 			<br>
             Committee: Sarita Adve (chair), Deming Chen, Nam Sung Kim, and Tianyin Xu
