Update thesis committee information
Added committee members and their affiliations to the thesis committee page.

--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -86,6 +86,21 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
+		<strong><a href="https://shuaiwang516.github.io" target="_blank">Shuai Wang</a></strong>
+			<br>
+            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign
+			<br>
+            Committee: Darko Marinov (chair), Tianyin Xu (co-chair), Reyhaneh Jabbarvand, and Yongle Zhang
+        </div>
+      </td>
+  </tr>
+
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
 	    <strong><a href="https://ynnsau.github.io" target="_blank">Yan Sun</a></strong>
 			<br>
             Department of Electrical and Computer Engineering, University of Illinois Urbana-Champaign
